homepage/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage
  namespace: homepage
  labels:
    app.kubernetes.io/name: homepage
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: homepage
  template:
    metadata:
      labels:
        app.kubernetes.io/name: homepage
    spec:
      serviceAccountName: homepage
      automountServiceAccountToken: true
      containers:
        - name: homepage
          image: ghcr.io/gethomepage/homepage:v1.5.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              memory: 256Mi
          livenessProbe:
            httpGet:
              path: /api/healthcheck
              port: http
              httpHeaders:
                - name: Host
                  value: localhost:3000
            initialDelaySeconds: 15
            timeoutSeconds: 5
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /api/healthcheck
              port: http
              httpHeaders:
                - name: Host
                  value: localhost:3000
            initialDelaySeconds: 15
            timeoutSeconds: 5
            periodSeconds: 30
          volumeMounts:
            - name: config
              mountPath: /app/config
            - name: logs
              mountPath: /app/config/logs
      volumes:
        - name: config-src
          configMap:
            name: homepage-config
        - name: config
          emptyDir: {}
        - name: logs
          emptyDir: {}
